--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 ﻿{
-  "name": "Bot 7.1",
-  "description": "Bot 7.1.",
+  "name": "Link Directo",
+  "description": "Link Directo",
   "env": {
     "administrador": {
       "description": "Usuario",
